@@ -1,3 +1,7 @@
+2011-08-02 Andrea Di Simone
+	* adding NTUP_HSG2 to ListOfDefaultPositionalKeys
+	* tagging PATJobTransforms-00-03-54
+
 2011-07-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Added outputNTUP_L1TGCFile to script/Reco_trf.py
 	* Tagging as PATJobTransforms-00-03-53
